--- a/Omnifood/index.html
+++ b/Omnifood/index.html
@@ -8,6 +8,17 @@
     </head>
     <body>
         <header>
+            <nav>
+                <div class="row main-nav">
+                    <img class="logo" src="resources/img/logo-white.png" alt="Omnifood-logo">
+                    <ul>
+                        <li><a href="#">Food delivery</a></li>
+                        <li><a href="#">How it works</a></li>
+                        <li><a href="#">Our cities</a></li>
+                        <li><a href="#">Sign up</a></li>
+                    </ul>
+                </div>
+            </nav>
             <div class="hero-text-box">
                 <h1>Goodbye junk food.<br>Hello super healthy meals.</h1>
                 <a class="btn btn-full" href="#">I'm hungry</a>
